--- a/MidTerm.ioc
+++ b/MidTerm.ioc
@@ -11,18 +11,19 @@ Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PA5
 Mcu.Pin1=PA6
-Mcu.Pin10=PB7
-Mcu.Pin11=PB8
-Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PB6
+Mcu.Pin11=PB7
+Mcu.Pin12=PB8
+Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA7
 Mcu.Pin3=PB0
 Mcu.Pin4=PB1
 Mcu.Pin5=PB2
-Mcu.Pin6=PB3
-Mcu.Pin7=PB4
-Mcu.Pin8=PB5
-Mcu.Pin9=PB6
-Mcu.PinsNb=13
+Mcu.Pin6=PA8
+Mcu.Pin7=PB3
+Mcu.Pin8=PB4
+Mcu.Pin9=PB5
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -40,21 +41,25 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA5.GPIO_Label=button_0
-PA5.GPIO_PuPd=GPIO_PULLUP
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=LED
 PA5.Locked=true
-PA5.Signal=GPIO_Input
+PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA6.GPIO_Label=button_1
+PA6.GPIO_Label=RESET
 PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
 PA6.Signal=GPIO_Input
 PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA7.GPIO_Label=button_2
+PA7.GPIO_Label=INC
 PA7.GPIO_PuPd=GPIO_PULLUP
 PA7.Locked=true
 PA7.Signal=GPIO_Input
+PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA8.GPIO_Label=DEC
+PA8.GPIO_PuPd=GPIO_PULLUP
+PA8.Locked=true
+PA8.Signal=GPIO_Input
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=a
 PB0.Locked=true
